--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,20 +1,135 @@
-/* applies to anything of class "example-class-selector" */
-.example-class-selector {
-	margin-top: 2em;
-}
-
-/* applies to any <p> descendants of an element of class "example-class-selector" */
-.example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
-	color: #CC00AA;
-}
-
 body {
-     /* Background Image taken from Cocorini, cocorini.tumblr.com/patterns */
-     background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png");
-     background-color: #FFCA6E;
+
+    /* Background Image taken from Cocorini, cocorini.tumblr.com/patterns */
+    background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png");
+    background-color: #FFCA6E;
+
+    /* Setting margins for all content */
+    margin-top: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
+a {
+	color: #FFFFFF;
+}
+
+/* When hovering over hyperlinks, links turn black and are not underlined */
+a:hover{
+	text-decoration: none;
+	color: #000000;
+}
+
+/* */
+#Top {
+	margin-bottom: 0em;
+	padding-bottom: 0em;
+}
+
+/* Aligns Title/Logo to left */
+#TopLeft {
+	float: left;
+	text-align: center;
+}
+
+/* */
 #Title {
-     text-transform: uppercase;
+	/* Creates filled border */
+	background-color: #FFCA6E;
+	border-style: solid;
+	border-color: #FFCA6E;
+	border-radius: 40px 25px;
+	border-width: 13px;
+
+	/* Sets title font */
+    text-transform: uppercase;
+    font-family: Impact, Courier, monospace;
+    font-size: 4em;
+    font-style: normal;
+
+    vertical-align: bottom;
+}
+
+/* Adjusts Size*/
+#TitleLogo {
+	margin-bottom: -13px;
+	width: 150px;
+	height: 120px;
+}
+
+/* Aligns User/SignOut to right */
+#TopRight {
+	float: right;
+
+	padding-top: 25px;
+	padding-right: 20px;
+
+	text-align: center;
+}
+
+/* Sets font size */
+#User, #BarSeparator {
+	vertical-align: bottom;
+
+	font-size: 2em;
+}
+
+/* Sets font color */
+#UserName {
+	vertical-align: bottom;
+
+	color: black;
+}
+
+/* Adjusts size */
+#UserPhoto {
+	background-color: black;
+	border: 0px solid black;
+	width: 75px;
+	height: 75px;
+}
+
+/* Sets font color and size */
+#SignOut {
+	vertical-align: -17px;
+
+	color: black;
+	font-size: 1em;
+}
+
+/* Sets hover color to orange */
+#UserName:hover, #SignOut:hover {
+	color: #FFCA6E;
+}
+
+/* Sets border */
+#MenuBar {
+	clear: both;
+
+	background-color: #FFCA6E;
+	border-style: solid;
+	border-color: black;
+	border-radius: 16px;
+	border-width: 5px;
+
+	font-size: 2em;
+}
+
+#LeftMenuBar {
+	padding-left: 200px;
+
+	text-align: center;
+}
+
+#RightMenuBar {
+	float: right;
+	right: 20px;
+
+	padding-right: 20px;
+
+	word-spacing: 20px;
+}
+
+#Friends {
+	color: #FFFFFF;
 }
