--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -126,8 +126,11 @@ a:hover{
 	right: 20px;
 
 	padding-right: 20px;
+}
 
-	word-spacing: 20px;
+#ContactUs {
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 #Friends {
