--- a/static/css/create_meetups.css
+++ b/static/css/create_meetups.css
@@ -1,17 +1,114 @@
 body{
   background-image:url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png");
   background-color: #FFCA6E;
+
+  margin-top: 32px;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
+a{
+  color: #FFFFFF;
+}
+a:hover{
+  text-decoration: none;
+  color: #000000;
+}
 #top{
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 999;
-  width: 100%;
-  height: 23px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+#top_left{
+  float: left;
+  text-align: center;
 }
 #title{
-  text-transform:uppercase;
+  background-color: #FFCA6E;
+  border-style: solid;
+  border-color: #FFCA6E;
+  border-radius: 40px 25px;
+  border-width: 9px;
+
+  text-transform: uppercase;
+  font-family: Impact, Courier, monospace;
+  font-size: 60px;
+  font-style: normal;
+
+  vertical-align: bottom;
+}
+
+#logo{
+  margin-bottom: -13px;
+  width: 150px;
+  height: 120px;
+}
+#top_right{
+  float: right;
+
+  padding-top: 25px;
+  padding-right: 20px;
+
+  text-align: center;
+}
+
+#user, #bar{
+  vertical-align: bottom;
+
+  font-size: 30px;
+}
+
+#user_name{
+  vertical-align: bottom;
+
+  color: #000000;
+}
+
+#user_photo{
+  background-color: #000000;
+  border: 0px solid #000000;
+  width: 75px;
+  height: 75px;
+}
+
+#sign_out{
+  vertical-align: -15px;
+  color: #000000;
+  font-size: 16px;
+}
+
+#user_name:hover, #sign_out:hover {
+  color: #FFCA6E;
+}
+
+#menu_bar{
+  clear: both;
+
+  background-color: #FFCA6E;
+  border-style: solid;
+  border-color: #000000;
+  border-radius: 16px;
+  border-width: 5px;
+
+  font-size: 30px;
+}
+
+#left_menu_bar{
+  padding-left: 200px;
+  text-align: center;
+}
+
+#right_menu_bar{
+  float: right;
+  right: 20px;
+
+  padding-right: 20px;
+}
+
+#contact{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#friends{
+  color: #FFFFFF;
 }
