--- a/static/css/create_meetups.css
+++ b/static/css/create_meetups.css
@@ -108,7 +108,7 @@ a:hover{
 
 #left_menu_bar{
   position: absolute;
-  left: 160px;
+  left: 118px;
   color: #FFFFFF;
   text-align: center;
 }
@@ -127,9 +127,10 @@ a:hover{
 #friends{
   color: #FFFFFF;
 }
+
 #friends_list{
   position: absolute;
-  width: 450px;
+  width: 346px;
   top: 170px;
   height: 550px;
 
@@ -140,7 +141,8 @@ a:hover{
 #friends_message{
   position: absolute;
   height: 200px;
-  width: 400px;
+  width: 330px;
+  top: 10px;
   text-align: center;
 
   font-size: 30px;
@@ -154,7 +156,7 @@ a:hover{
   position: absolute;
   top: 440px;
   height: 100px;
-  width: 440px;
+  width: 100%;
   background-color: #A0D8EB;
 
   border-top: 5px;
@@ -166,12 +168,12 @@ a:hover{
   border-radius: 0px 0px 10px 10px;
 
   text-align: center;
-  font-size: 35px;
+  font-size: 36px;
 }
 #main_center{
   position: absolute;
-  top: 167px;
-  left: 450px;
+  top: 180px;
+  left: 410px;
   width: 400px;
   height: 600px;
   margin: auto;
@@ -245,6 +247,8 @@ a:hover{
   padding-right: auto;
   height: 350px;
   width: 350px;
+
+  background-color: #FFFFFF;
   border-style: solid;
   border-color: #000000;
   border-width: 5px;
