--- a/static/css/testing.css
+++ b/static/css/testing.css
@@ -1,14 +1,16 @@
 /*Applies background image and color of website */
 body {
-    /* Background Image taken from Cocorini, cocorini.tumblr.com/patterns */
-    background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png");
-    background-color: #FFFFFF;
+  /* Background Image taken from Cocorini, cocorini.tumblr.com/patterns */
+  background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png");
+  background-color: #FFFFFF;
 
-    /* Setting margins for all content */
-    margin: auto;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: auto;
+  /* Setting margins for all content */
+  margin: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: auto;
+
+  font-family: "Lato", sans-serif;
 }
 
 
@@ -62,38 +64,48 @@ footer {
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
   .sidenav {
-    height: auto;
-    padding: 15px;
+    padding-top: 15px;
   }
-  .sidenav a {font-size: 18px;}
+  .sidenav a {
+    font-size: 18px;
+  }
 
   .row.content {
   	height:auto;
   }
 }
 
+#friendsList {
+  background-color: #111;
+  border: 1rem solid #111;
+  border-radius: 1rem;
+  color: #818181;
+}
+
+#friendsList:hover {
+  color: white;
+}
+
 .sidenav {
-	position: fixed;
     height: 100%;
     width: 0;
+    position: fixed;
+    z-index: 1;
     top: 12%;
     left: 0;
-    padding-top: 60px;
-
     background-color: #111;
-    border-radius: 0px, 15px, 15px, 0px;
-    z-index: 1;
     overflow-x: hidden;
     transition: 0.5s;
+    padding-top: 60px;
 }
 
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s;
+    transition: 0.3s
 }
 
 .sidenav a:hover, .offcanvas a:focus{
@@ -106,6 +118,11 @@ footer {
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
 }
 
 #addFriend {
