--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-  <link href="css/login.css" rel="stylesheet"/>
+  <link href="../public/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public/css/bootstrap-theme.min.css" rel="stylesheet">
+  <link href="../public/css/login.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
   <!-- JavaScript -->
@@ -56,7 +56,7 @@
 
       <div class="form-group"> 
         <div class="col-sm-offset-4 col-sm-5">
-          <a href="homepage.html" type="submit" class="btn btn-primary btn-block">Login</a>
+          <a href="homepage.handlebars" type="submit" class="btn btn-primary btn-block">Login</a>
         </div>
       </div>
     </form>
