Changes to app js file

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,6 +16,7 @@
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</script>
+	<!-- <script src="../public/js/FILENAME.js"></script> -->
 
 	<!-- Toggle Popovers -->
 	<script>
@@ -187,6 +188,5 @@
 	    	</a>
 		</div>
 	</footer>
-
 </body>
 </html>
