--- a/views/create_meetups.html
+++ b/views/create_meetups.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link href="../public/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../public/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="datetime/jquery.datetimepicker.css" type="text/css" rel="stylesheet">
-    <link href="../public/css/create_meetups.css" rel="stylesheet"/>
+    <link href="css/create_meetups.css" rel="stylesheet"/>
 
     <!-- Font -->
 	  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
@@ -30,7 +30,7 @@
 				    </button>
 
 				    <!-- Title/Logo -->
-	    		  <a class="navbar-brand" href="homepage.handlebars">
+	    		  <a class="navbar-brand" href="homepage.html">
 	    			  <span id="title">StudyBuddy</span>
 	    		  </a>
 	    	  </div>
@@ -40,7 +40,7 @@
 
 					  <!-- Home -->
 					  <li class="active menu">
-						  <a class="rightMenu" href="homepage.handlebars">
+						  <a class="rightMenu" href="homepage.html">
 							  Home
 						  </a>
 					  </li>
@@ -48,11 +48,11 @@
 					  <li>
 						  <a class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">Directory<span class="caret"></span></a>
 						  <ul class="dropdown-menu text-center">
-							  <li><a href="settings.handlebars">Settings</a></li>
-						    <li><a href="contact_us.handlebars">Contact Us</a></li>
-							  <li><a href="help.handlebars">Help</a></li>
+							  <li><a href="settings.html">Settings</a></li>
+						    <li><a href="contact_us.html">Contact Us</a></li>
+							  <li><a href="help.html">Help</a></li>
                 <hr>
-						    <li><a href="login.handlebars">Sign Out</a></li>
+						    <li><a href="login.html">Sign Out</a></li>
 						  </ul>
 					  </li>
 				  </ul>
@@ -214,12 +214,12 @@
           <h4>Quiet?: <h4 id="quiet">N/A</h4></h4>
           <h4>Crowded?: <h4 id="crowded">N/A</h4></h4>
           <div>
-            <a type="button" id="cancel" class="btn btn-danger btn-lg" href="homepage.handlebars">
+            <a type="button" id="cancel" class="btn btn-danger btn-lg" href="homepage.html">
               <span>Cancel Meetup</span>
             </a>
           </div>
           <div>
-            <a type="button" id="create" class="btn btn-success btn-lg" href="homepage.handlebars">
+            <a type="button" id="create" class="btn btn-success btn-lg" href="homepage.html">
               <span>Schedule this Meetup!</span>
             </a>
           </div>
