--- a/views/homepage.html
+++ b/views/homepage.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap -->
-	<link href="../public/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../public/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="../public/css/homepage.css" rel="stylesheet"/>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="css/homepage.css" rel="stylesheet"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 	<!-- JavaScript -->
@@ -16,7 +16,6 @@
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</script>
-	<!-- <script src="../public/js/FILENAME.js"></script> -->
 
 	<!-- Toggle Popovers -->
 	<script>
@@ -48,7 +47,7 @@
 				</button>
 
 				<!-- Title/Logo -->
-	    		<a class="navbar-brand" href="homepage.handlebars">
+	    		<a class="navbar-brand" href="homepage.html">
 	    			<span id="title" class="orange">StudyBuddy</span>
 	    		</a>
 	    	</div>
@@ -59,7 +58,7 @@
 
 					<!-- Home -->
 					<li class="active menu">
-						<a class="rightMenu" href="homepage.handlebars">
+						<a class="rightMenu" href="homepage.html">
 							Home
 						</a>
 					</li>
@@ -71,11 +70,11 @@
 							<span class="caret orange"></span>
 						</a>
 						<ul class="dropdown-menu text-center">
-							<li><a href="settings.handlebars">Settings</a></li>
-							<li><a href="contact_us.handlebars">Contact Us</a></li>
-							<li><a href="help.handlebars">Help</a></li>
+							<li><a href="settings.html">Settings</a></li>
+							<li><a href="contact_us.html">Contact Us</a></li>
+							<li><a href="help.html">Help</a></li>
 							<hr>
-							<li><a href="login.handlebars">Sign Out</a></li>
+							<li><a href="login.html">Sign Out</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -177,16 +176,17 @@
 	<!-- Bottom Buttons -->
 	<footer class="container-fluid text-center">
 	    <div class="col-sm-offset-3 col-sm-4">
-			<a type="button" id="myMeetups" class="btn btn-info btn-lg" href="my_meetups.handlebars">
+			<a type="button" id="myMeetups" class="btn btn-info btn-lg" href="my_meetups.html">
 	    		<span>My Meetups</span>
 	    	</a>
 	    </div>
 
 	    <div class="col-sm-4">
-	    	<a type="button" id="createMeetup" class="btn btn-success btn-lg" href="create_meetups.handlebars">
+	    	<a type="button" id="createMeetup" class="btn btn-success btn-lg" href="create_meetups.html">
 	    		<span>Create Meetup</span>
 	    	</a>
 		</div>
 	</footer>
+
 </body>
 </html>
