--- a/views/my_meetups.html
+++ b/views/my_meetups.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Bootstrap -->
-	<link href="../public/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../public/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="../public/css/my_meetups.css" rel="stylesheet"/>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="" rel="stylesheet"/>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 
 		<!-- Links to Homepage, Title and Corgi Logo -->
 		<span>
-			<a href="homepage.handlebars" id="TopLeft">
+			<a href="homepage.html" id="TopLeft">
 				<span id="Title">StudyBuddy</span>
 				<img src="">
 			</a>
@@ -33,13 +33,13 @@
 				<!-- User Profile Picture -->
 				<img src="" id="UserPhoto">
 				<!-- User Name -->
-				<a href="" id="UserName">Corgi</a>
+				<a href="profile.html" id="UserName">Corgi</a>
 			</span>
 			<!-- Shows sign out option -->
 			<!-- Bar Separator -->
 			<span id="BarSeparator">|</span>
 			<!-- Sign Out Button -->
-			<a href="login.handlebars" id="SignOut">Sign Out</a>
+			<a href="login.html" id="SignOut">Sign Out</a>
 		</span>
 	</div>
 
@@ -50,9 +50,9 @@
 		</span>
 
 		<span id="RightMenuBar">
-			<a href="settings.handlebars">Settings</a>
-			<a href="contact_us.handlebars">Contact Us</a>
-			<a href="help.handlebars">Help</a>
+			<a href="settings.html">Settings</a>
+			<a href="contact_us.html">Contact Us</a>
+			<a href="help.html">Help</a>
 		</span>
 	</div>
 
@@ -61,4 +61,3 @@
 
 	</div>
 </body>
-</html>
