--- a/views/settings.html
+++ b/views/settings.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact Us</title>
+	<title>Help</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap -->
-	<link href="../public/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../public/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="../public/css/contact_us.css" rel="stylesheet"/>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="css/settings.css" rel="stylesheet"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 	<!-- JavaScript -->
@@ -40,7 +40,7 @@
 				</button>
 
 				<!-- Title/Logo -->
-	    		<a class="navbar-brand" href="homepage.handlebars">
+	    		<a class="navbar-brand" href="homepage.html">
 	    			<span id="title" class="orange">StudyBuddy</span>
 	    		</a>
 	    	</div>
@@ -51,8 +51,8 @@
 
 					<!-- Home -->
 					<li class="menu">
-						<a class="rightMenu" href="homepage.handlebars">
-							<span class="orange">Home</span>
+						<a class="rightMenu orange" href="homepage.html">
+							Home
 						</a>
 					</li>
 
@@ -64,11 +64,11 @@
 						</a>
 
 						<ul class="dropdown-menu text-center">
-							<li><a href="settings.handlebars">Settings</a></li>
-							<li><a href="contact_us.hhandlebars">Contact Us</a></li>
-							<li><a href="help.handlebars">Help</a></li>
+							<li><a href="settings.html">Settings</a></li>
+							<li><a href="contact_us.html">Contact Us</a></li>
+							<li><a href="help.html">Help</a></li>
 							<hr>
-							<li><a href="login.handlebars">Sign Out</a></li>
+							<li><a href="login.html">Sign Out</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -77,29 +77,10 @@
 	</nav>
 
 	<!-- Main Screen -->
-	<div class="container-fluid text-center">
-		<h1>Contact Us</h1>
+	<div class="container-fluid text-left">
+		<h1>Settings</h1>
 		<br>
-		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#richard">Richard Oh</button>
-		<div id="richard" class="collapse">
-			<p>rioh@ucsd.edu</p>
-			<p>- OR -</p>
-			<p> (###)-###-#### </p>
-		</div>
-		<hr>
-		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#ingrid">Ingrid Ou</button>
-		<div id="ingrid" class="collapse">
-			<p>iou@ucsd.edu</p>
-			<p>- OR -</p>
-			<p> (###)-###-#### </p>
-		</div>
-		<hr>
-		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#jovan">Jovan Limosnero</button>
-		<div id="jovan" class="collapse">
-			<p>jlimosne@ucsd.edu</p>
-			<p>- OR -</p>
-			<p> (###)-###-#### </p>
-		</div>
+		<h4>Coming Soon!</h4>
 	</div>
 </body>
 </html>
