--- a/views/create_meetups.html
+++ b/views/create_meetups.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="../public/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../public/css/bootstrap-theme.min.css" rel="stylesheet"/>
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="datetime/jquery.datetimepicker.css" type="text/css" rel="stylesheet">
-    <link href="css/create_meetups.css" rel="stylesheet"/>
+    <link href="../public/datetime/jquery.datetimepicker.css" type="text/css" rel="stylesheet">
+    <link href="../public/css/create_meetups.css" rel="stylesheet"/>
 
     <!-- Font -->
 	  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
