--- a/static/css/create_meetup.css
+++ b/static/css/create_meetup.css
@@ -1,7 +1,8 @@
 /*Applies background image and color of website */
 body {
   /* Background Image taken from Cocorini, cocorini.tumblr.com/patterns */
-  /* background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png");*/
+  /* background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png"); */
+  background-image: url("http://36.media.tumblr.com/ebe54054565476bcb1b95fac4375428c/tumblr_novhnrwKja1ru3nbdo9_r2_250.png");
   background-color: #FFFFFF;
 
   /* Setting margins for all content */
@@ -9,14 +10,12 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   padding: auto;
-
-  font-family: 'Coiny', cursive;
-  /*font-family: "Lato", sans-serif; */
 }
 
 h1, h2, h3, h4, h5, h6{
   font-family: 'Coiny', cursive;
 }
+
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
 	margin-top: 1%;
