--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -11,6 +11,11 @@ body {
   padding: auto;
 }
 
+/* Set All Header Fonts */
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Coiny', cursive;
+}
+
 /* Top Nav Bar */
 .navbar {
 	margin: 0% 0% 1% 0%;
@@ -26,15 +31,11 @@ body {
   font-weight: bold;
 }
 
-.orange {
-  color: #FFD996;
+#title, #options {
+  color: #FFE5B8;
 }
 
-.orange:hover {
-  color: #FFFFFF;
-}
-
-#title:hover {
+#title:hover, #options:hover {
   color: #FFFFFF;
 }
 
@@ -78,8 +79,4 @@ ul hr {
 
 ul {
   list-style-type: none;
-}
-
-h1, h3, h4 {
-  font-family: 'Coiny', cursive;
 }
