--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,13 +12,16 @@ body {
 	/* background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png"); */
 	background-color: #FFFFFF;
 
-   color: #FFFFFF;
    text-shadow:
        2px 2px 0 #FFB533,
      -1px -1px 0 #FFB533,  
       1px -1px 0 #FFB533,
       -1px 1px 0 #FFB533,
        1px 1px 0 #FFB533;
+}
+
+* {
+	color: #FFFFFF;
 }
 
 #title {
