--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,6 +1,5 @@
 /* Friends List Button */
 #friendsList {
-  position: fixed;
   float: left;
   background-color: #111;
   border: 0.75rem solid #111;
@@ -61,7 +60,6 @@
 }
 
 .calendar {
-  position: fixed;
   float: right;
   margin-bottom: 1rem;
 }
@@ -69,6 +67,7 @@
 /* Month header */
 .month {
     padding: 70px 25px;
+    max-height: 200px;
     width: 100%;
     background: #FFD996;
 }
@@ -102,20 +101,20 @@
 .weekdays {
     margin: 0;
     padding: 10px 0;
-    background-color:#ddd;
+    background-color:#96BCFF;
 }
 
 .weekdays li {
     display: inline-block;
     width: 13.6%;
-    color: #666;
+    color: #FFFFFF;
     text-align: center;
 }
 
 /* Days (1-31) */
 .days {
     padding: 10px 0;
-    background: #eee;
+    background: #FFFFFF;
     margin: 0;
 }
 
@@ -126,7 +125,7 @@
     text-align: center;
     margin-bottom: 5px;
     font-size:12px;
-    color:#777;
+    color:#96BCFF;
 }
 
 /* Highlight the "current" day */
