--- a/static/css/login.css
+++ b/static/css/login.css
@@ -47,3 +47,16 @@ body {
 	right: 0;
 	bottom: 0;
 }
+
+.leftText, #login {
+	font-size: 2rem;
+}
+
+#login {
+	text-shadow:
+		0px 0px 0 #000000,
+		0px 0px 0 #000000,  
+		0px 0px 0 #000000,
+		0px 0px 0 #000000,
+		0px 0px 0 #000000;
+}
