--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,11 +1,11 @@
 /* Friends List Button */
 #friendsList {
   float: left;
-  background-color: #111;
-  border: 0.75rem solid #111;
+  background-color: #96BCFF;
+  border: 0.75rem solid #96BCFF;
   border-radius: 1rem;
 
-  color: #FFE5B8;
+  color: #FFFFFF;
   font-size: 1rem;
   font-weight: bold;
 
@@ -13,7 +13,7 @@
 }
 
 #friendsList:hover {
-  color: white;
+  color: #FFE5B8;
 }
 
 /* Side Nav Popout */
@@ -24,7 +24,7 @@
     z-index: 2;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #FFD996;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -34,13 +34,13 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #FFE5B8;
+    color: #FFFFFF;
     display: block;
     transition: 0.3s
 }
 
 .sidenav a:hover, .offcanvas a:focus, .sidenav p:hover, .offcanvas p:focus{
-    color: #FFFFFF;
+    color: #96BCFF;
 }
 
 .sidenav .closebtn {
@@ -52,6 +52,7 @@
 }
 
 #addFriend {
+  margin-top: 5%;
 	margin-left: 5%;
 	margin-right: 5%;
 	width: 90%;
@@ -60,8 +61,9 @@
 }
 
 .calendar {
-  float: right;
   margin-bottom: 1rem;
+  width: 100%;
+  z-index: -1;
 }
 
 /* Month header */
